# monodepth2.cpp

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  onnx-tensorrt-tar.Dockerfile  runner.cpp  sample.md  to_jit.py  to_jit_onnx.py
configs/: train_depth_r50.yaml
demo/: CMakeLists.txt  main.cpp  to_jit.py  to_onnx.py
include/monodepth/config/: defaults.h  paths_catalog.h
include/monodepth/data/: build.h  coco_detection.h  collate_batch.h  data.h
include/monodepth/engine/: inference.h  parallel.h  trainer.h
include/monodepth/layers/: batch_norm.h  conv2d.h  make_layers.h  misc.h
include/monodepth/solver/: lr_scheduler.h  optimizer.h  solver_build.h
src/: CMakeLists.txt
src/monodepth/config/: CMakeLists.txt  defaults.cpp  paths_catalog.cpp
src/monodepth/data/: CMakeLists.txt  build.cpp  coco_detection.cpp  collate_batch.cpp
src/monodepth/data/datasets/: cityscapes_datasets.cpp  coco_datasets.cpp  kitti_datasets.cpp
src/monodepth/data/samplers/: build.cpp  samplers.cpp
src/monodepth/data/transforms/: build.cpp  transforms.cpp
src/monodepth/engine/: CMakeLists.txt  inference.cpp  parallel.cpp  trainer.cpp
src/monodepth/layers/: CMakeLists.txt  batch_norm.cpp  conv2d.cpp  make_layers.cpp  misc.cpp
src/monodepth/modeling/: CMakeLists.txt
src/monodepth/modeling/backbone/: backbone.cpp  fpn.cpp  own_resnet.cpp  resnet.cpp  vovnet.cpp
src/monodepth/modeling/estimator/: depthdecoder.cpp  losses.cpp  monodepth2.cpp  mp_losses.cpp  posedecoder.cpp
src/monodepth/solver/: CMakeLists.txt  lr_scheduler.cpp  optimizer.cpp  solver_build.cpp
src/monodepth/utils/: CMakeLists.txt  bisect.cpp  camera.cpp  checkpoint.cpp  depth_utils.cpp  image_utils.cpp  metric_logger.cpp  misc.cpp  registry.cpp  timer.cpp  tovec.cpp
(+30 files in other folders)
